--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "juandelatorre/up-task_mvc",
+    "name": "Miguel Luque",
     "description": "todo-work",
     "type": "project",
     "autoload": {
